--- a/container_setup/juice-shop.yaml
+++ b/container_setup/juice-shop.yaml
@@ -7,7 +7,7 @@ spec:
     metadata:
       labels:
         app: juice-shop
-        bogus: bogus
+        # bogus: bogus
     spec:
       containers:
       - name: juice-shop
